# booking-backend

./: .dockerignore  .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 6098a3cf24bd_add_payments.py  762b1a533e6b_add_token.py  9ccc73a3eca6_initial.py  9d8ea604e877_add_created_at_to_all_and_roles_to_user.py  f8a3b57af7b8_add_timezone_to_dt.py
src/booking/: __init__.py  main.py
src/booking/api/: dependencies.py
src/booking/api/routes/: __init__.py  auth.py  booking.py  payment.py  user.py
src/booking/api/schemas/: auth.py  booking.py  payment.py
src/booking/domain/: errors.py  models.py  repo.py
src/booking/domain/bookings/: errors.py  models.py  repo.py
src/booking/domain/payment/: errors.py  models.py  provider.py  repo.py
src/booking/domain/refresh_token/: errors.py  models.py  repo.py
src/booking/domain/users/: errors.py  models.py  repo.py
src/booking/infra/: __init__.py  a_security.py  db.py  orm.py  repository.py
src/booking/infra/bookings/: orm.py  (+1 more)
src/booking/service/: auth.py  booking.py  payment.py
src/config/: config.py
tests/: conftest.py  fakes.py  test_api_booking.py  test_auth.py  test_booking.py  test_integration.py  test_security.py
tests/helpers/: webhook.py
tests/integration/: test_auth.py  test_booking_api.py  test_booking_db.py  test_payment_api.py  test_payment_db.py
tests/unit/: test_auth.py  test_booking_domain.py  test_booking_service.py  test_payment_domain.py  test_payment_service.py  test_webhook_signature.py
(+8 files in other folders)
